--- a/src/app/components/SlideShow/SlideShow.scss
+++ b/src/app/components/SlideShow/SlideShow.scss
@@ -6,13 +6,13 @@ $uiBorderColor: #000000;
 }
 
 #{$className} {
+    z-index: 10;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     img {
         width: 100%;
     }
-    position: absolute;
     top: 50%;
     width: 100%;
     transform: translate(0, -50%);
